changed the name to webdev

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
         <div class="container">
             <div class="navigation">
-                    <span class="name"><b>Yourname</b></span>
+                    <span class="name"><b>Webdev</b></span>
                     <ul class="nav-list">
                             <li class="active">Home</li>
                             <li>About</li>
